--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 		</tbody>
 			<tfoot>
 				<tr>
-					<td colspan="2">Итог: 5 <http://pngimg.com/uploads/deadpool/deadpool_PNG83.png width="120"></td>
+					<td colspan="2">Итог: 5 <img src="http://pngimg.com/uploads/deadpool/deadpool_PNG83.png" width="120"></td>
 				</tr>
 			</tfoot>
 		
